--- a/myui.ui
+++ b/myui.ui
@@ -78,7 +78,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Miles</string>
+     <string>male</string>
     </property>
    </widget>
    <widget class="QRadioButton" name="radio2">
@@ -91,7 +91,30 @@
      </rect>
     </property>
     <property name="text">
-     <string>km</string>
+     <string>female</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>210</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radio3">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>160</y>
+      <width>95</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>n/a</string>
     </property>
    </widget>
   </widget>
